implement validator for command
