# admin/server.go
@@ -2,6 +2,7 @@ package admin
 
 import (
 	"context"
+	"fmt"
 
 	pb "github.com/onflow/flow-go/admin/admin"
 )
@@ -12,11 +13,16 @@ type adminServer struct {
 }
 
 func (s *adminServer) RunCommand(ctx context.Context, in *pb.RunCommandRequest) (*pb.RunCommandResponse, error) {
-	if err := s.cr.runCommand(ctx, in.GetCommandName(), in.GetData().AsMap()); err != nil {
+	var result interface{}
+	var err error
+
+	if result, err = s.cr.runCommand(ctx, in.GetCommandName(), in.GetData().AsMap()); err != nil {
 		return nil, err
 	}
 
-	return &pb.RunCommandResponse{}, nil
+	return &pb.RunCommandResponse{
+		Output: fmt.Sprint(result),
+	}, nil
 }
 
 func NewAdminServer(cr *CommandRunner) *adminServer {
